downgrade to java 8 for local machine JDK version